# hexlet-web-test-1

./: Makefile  pyproject.toml  users.json
hexlet_web_test_1/: example.py  users_functions.py
hexlet_web_test_1/templates/: index.html  login.html
hexlet_web_test_1/templates/users/: edit.html  index.html  new.html  user-page.html
